Most of the Functionalities added: patient request, Caretaker/Guardian role, History and notifications

--- a/app.json
+++ b/app.json
@@ -21,10 +21,16 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.anonymous.onetaphelp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "be9b6e3e-dae0-4474-8ee5-99c9f4be0854"
+      }
     }
   }
 }
