--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.0",
     "expo": "~54.0.31",
+    "expo-device": "^8.0.10",
+    "expo-notifications": "^0.32.16",
     "expo-status-bar": "~3.0.9",
     "firebase": "^12.8.0",
     "react": "19.1.0",
